error in d3 id fixed but not showing

--- a/recipe_network_d3/recipe.css
+++ b/recipe_network_d3/recipe.css
@@ -1,8 +1,14 @@
-/* .node {
+.main_svg {
+  width: 960px;
+  height: 600px;
+}
+
+.node {
     stroke: #fff;
     stroke-width: 1.5px;
 }
+
 .link {
     stroke: #999;
     stroke-opacity: .6;
-} */
+}
